--- a/apocalypse-example/src/main/resources/application.properties
+++ b/apocalypse-example/src/main/resources/application.properties
@@ -15,9 +15,23 @@ mybatis.type-aliases-package=com.apocalypse.example.model
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 #mapper\u63A5\u53E3\u5B9E\u73B0
 mapper.mappers=com.apocalypse.common.mybatis.MyMapper
+#insertSelective \u548C updateByPrimaryKeySelective \u4E2D\uFF0C\u662F\u5426\u5224\u65AD\u5B57\u7B26\u4E32\u7C7B\u578B !=''
 mapper.not-empty=false
+#\u5B9E\u4F53\u548C\u8868\u8F6C\u6362\u65F6\u7684\u9ED8\u8BA4\u89C4\u5219
+mapper.style=camelhumpAndLowercase
+#\u914D\u7F6E\u4E3A true \u540E\uFF0Cdelete \u548C deleteByExample \u90FD\u5FC5\u987B\u8BBE\u7F6E\u67E5\u8BE2\u6761\u4EF6\u624D\u80FD\u5220\u9664\uFF0C\u5426\u5219\u4F1A\u629B\u51FA\u5F02\u5E38
+mapper.safe-delete=true
+#\u914D\u7F6E\u4E3A true \u540E\uFF0CupdateByExample \u548C updateByExampleSelective \u90FD\u5FC5\u987B\u8BBE\u7F6E\u67E5\u8BE2\u6761\u4EF6\u624D\u80FD\u5220\u9664\uFF0C\u5426\u5219\u4F1A\u629B\u51FA\u5F02\u5E38
+mapper.safe-update=true
 #\u6307\u5B9A\u6570\u636E\u5E93\u7C7B\u578B
 mapper.identity=MYSQL
+#\u81EA\u52A8\u5904\u7406\u5173\u952E\u5B57
+mapper.wrap-keyword=`{0}`
+#\u6821\u9A8C\u901A\u7528 Example \u6784\u9020\u53C2\u6570 entityClass \u662F\u5426\u548C\u5F53\u524D\u8C03\u7528\u7684 Mapper<EntityClass> \u7C7B\u578B\u4E00\u81F4
+mapper.check-example-entity-class=true
+#\u683C\u5F0F\u5316SQL
+mapper.seq-format=true
+
 
 #druid\u6570\u636E\u6E90\u914D\u7F6E
 # \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
