--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>apocalypse-user</module>
         <module>apocalypse-gateway</module>
         <module>apocalypse-example</module>
+        <module>apocalypse-front</module>
     </modules>
 
     <packaging>pom</packaging>
