--- a/apocalypse-example/src/main/resources/application-dev.properties
+++ b/apocalypse-example/src/main/resources/application-dev.properties
@@ -5,10 +5,12 @@ logging.path=E:/apocalypse/logs
 
 #dubbo\u670D\u52A1
 dubbo.application.name=apocalypse-example
-dubbo.registry.address=zookeeper://localhost:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=13141
-dubbo.scan.basePackages=com.apocalypse
+dubbo.scan.basePackages=com.apocalypse.example.dubbo
+
+#dubbo\u6CE8\u518C\u4E2D\u5FC3
+dubbo.registry.address=zookeeper://localhost:2181
 
 #\u6570\u636E\u5E93\u914D\u7F6E
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
