--- a/apocalypse-front/pom.xml
+++ b/apocalypse-front/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-example</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
