--- a/apocalypse-front/src/main/resources/application-dev.properties
+++ b/apocalypse-front/src/main/resources/application-dev.properties
@@ -6,6 +6,7 @@ logging.path=E:/apocalypse/logs
 #dubbo\u670D\u52A1
 dubbo.application.name=apocalypse-front
 dubbo.protocol.name=dubbo
-dubbo.scan.base-packages=com.apocalypse.front
+dubbo.protocol.port=13149
+dubbo.scan.base-packages=com.apocalypse
 #dubbo\u6CE8\u518C\u4E2D\u5FC3
 dubbo.registry.address=zookeeper://localhost:2181
