--- a/apocalypse-example/src/main/resources/application-dev.properties
+++ b/apocalypse-example/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ logging.path=E:/apocalypse/logs
 dubbo.application.name=apocalypse-example
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=13141
-dubbo.scan.basePackages=com.apocalypse.example.dubbo
+dubbo.scan.basePackages=com.apocalypse
 
 #dubbo\u6CE8\u518C\u4E2D\u5FC3
 dubbo.registry.address=zookeeper://localhost:2181
