--- a/apocalypse-front/src/main/resources/application.properties
+++ b/apocalypse-front/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#\u9ED8\u8BA4\u6FC0\u6D3B\u914D\u7F6E\u6587\u4EF6
+spring.profiles.active=@profileActive@
+
 logging.level.root=info
 
 server.port=8080
