--- a/apocalypse-common/pom.xml
+++ b/apocalypse-common/pom.xml
@@ -13,5 +13,23 @@
     <packaging>jar</packaging>
     <name>apocalypse-common</name>
     <url>http://maven.apache.org</url>
-    
+
+    <dependencies>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>problem-spring-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
