--- a/apocalypse-user/pom.xml
+++ b/apocalypse-user/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>apocalypse-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
