--- a/apocalypse-example/src/main/resources/application.yml
+++ b/apocalypse-example/src/main/resources/application.yml
@@ -1,35 +1,64 @@
 logging:
   config: classpath:logback-spring.xml
-  level:
-    tk:
-      mybatis: TRACE
 mapper:
   check-example-entity-class: true
   identity: MYSQL
-  mappers: com.apocalypse.common.mybatis.MyMapper
+  mappers:
+    - com.apocalypse.common.mybatis.MyMapper
   not-empty: false
   safe-delete: true
   safe-update: true
   seq-format: true
   style: camelhumpAndLowercase
   wrap-keyword: '`{0}`'
+
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+  row-bounds-with-count: true
+  offset-as-page-num: true
+
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   type-aliases-package: com.apocalypse.example.model
+
 server:
   port: 9041
+  servlet:
+    context-path: /example
+
 spring:
   profiles:
     active: @profileActive@
   datasource:
     druid:
-      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-      filters: stat,wall,slf4j
+      connectionProperties:
+        - druid.stat.mergeSql=true
+        - druid.stat.slowSqlMillis=5000
+      filters:
+        - stat
+        - wall
+        - slf4j
       maxActive: 20
       testOnReturn: false
       validationQuery: SELECT 1 FROM dual
   application:
     name: apocalypse-example
+
+  redis:
+    database: 0
+    host: localhost
+    port: 6399
+    password: guanlouyi
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
+    timeout: 10000ms
 
 
 
