--- a/apocalypse-user/src/main/resources/application-dev.properties
+++ b/apocalypse-user/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@ dubbo.scan.basePackages=com.recycle
 database.file=/
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/apocalypse_db?useUnicode=true&characterEncoding=utf8\
   &allowMultiQueries=true
 spring.datasource.username=root
