--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         <module>apocalypse-user</module>
         <module>apocalypse-gateway</module>
         <module>apocalypse-example</module>
-        <module>apocalypse-register</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -23,17 +22,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
         <relativePath/>
     </parent>
     <properties>
         <!-- 基础框架 -->
         <!-- Spring Boot -->
-        <springboot.version>2.0.6.RELEASE</springboot.version>
-        <spring-cloud-dependencies.version>Finchley.RELEASE</spring-cloud-dependencies.version>
+        <springboot.version>2.1.4.RELEASE</springboot.version>
+        <spring-cloud-dependencies.version>Greenwich.SR1</spring-cloud-dependencies.version>
         <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
 
-        <swagger-bootstrap-ui.version>1.8.8</swagger-bootstrap-ui.version>
+        <swagger-bootstrap-ui.version>1.9.3</swagger-bootstrap-ui.version>
 
         <!-- 编译属性 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -55,8 +54,10 @@
         <hutool-all.version>4.3.1</hutool-all.version>
         <mapstruct.version>1.2.0.Final</mapstruct.version>
         <java-jwt.version>3.8.0</java-jwt.version>
+        <xxl-job.version>2.0.2</xxl-job.version>
 
         <!-- 分布式服务部分 -->
+        <redisson-spring-boot-starter.version>3.10.7</redisson-spring-boot-starter.version>
 
         <!-- 测试部分 -->
 
@@ -65,12 +66,16 @@
         <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
         <mybatis-generator-maven-plugin.version>1.3.5</mybatis-generator-maven-plugin.version>
         <springloaded.version>1.2.5.RELEASE</springloaded.version>
-
     </properties>
 
     <dependencyManagement>
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
         <dependencies>
+            <dependency>
+                <groupId>com.apocalypse</groupId>
+                <artifactId>apocalypse-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
@@ -110,14 +115,33 @@
             </dependency>
 
             <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson-spring-boot-starter.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.auth0</groupId>
                 <artifactId>java-jwt</artifactId>
                 <version>${java-jwt.version}</version>
             </dependency>
+
+            <!-- http://www.xuxueli.com/xxl-job/#/?id=xxl-job -->
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxl-job.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
 
         <!-- JSON工具 fastjson https://github.com/alibaba/fastjson/wiki -->
         <dependency>
